<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateEntryFeature.Presentation.CreateEntryView">

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        android:icon="@drawable/ic_home"
         app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_email_us"
        android:title="@string/action_email_us"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_contact"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search_category"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>


    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="103"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_login"/>

    <item
        android:id="@+id/action_tester_feedback"
        android:title="@string/action_tester_feedback"
        android:orderInCategory="104"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_feedback"/>
</menu>